Refactoring  DRV8833 driver

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ monitor_speed = 115200
 ; must make information available
 ; also, for printf() to do something, DEBUG macro must be used to point at the wanted Debug_UARTx (0 to 3)
 ; but this is not used here.
-;build_flags = -DDEBUG=1 -DFREQ_SYS=60000000
+build_flags = -DDEBUG=1 -DFREQ_SYS=32000000
 ; uncomment this to use USB bootloader upload via WCHISP
 upload_protocol = isp
 
